removal of date filter for presidential elections filter

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -92,12 +92,12 @@
 							{% endif %}
 							{% if perms.psc.can_view_result %}
                             <li>
-                                <a href="{% url psc.views.eday_result_analysis %}">Result Analyses</a>
+                                <a href="{% url psc.views.eday_result_analysis %}">Presidential Elections Results</a>
                             </li>
 							{% endif %}
 							{% if perms.psc.can_view_result %}
                             <li>
-                                <a href="{% url psc.views.eday_guberresult_analysis %}">Gubernatorial Result Analyses</a>
+                                <a href="{% url psc.views.eday_guberresult_analysis %}">Gubernatorial Elections Results</a>
                             </li>
 							{% endif %}
 							{% if perms.psc.can_view_result %}
