specialized state filter for guber

--- a/psc/templates/psc/eday_guberresult_analysis.html
+++ b/psc/templates/psc/eday_guberresult_analysis.html
@@ -5,8 +5,9 @@
 <script type="text/javascript" charset="utf-8">
     $(function() {
         $("#reset").click(function () {
-            $("#id_date").val("");
+            $("#id_state").val("21"); // Abia State
             $("#id_sample").val("");
+			$("#filter_form").submit();
 		});
     });
 </script>
