--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -2,5 +2,6 @@
 	<td>{{contact.name}}</td><td>{{connection}}</td><td>{{direction}}</td><td>{{date}}</td><td>{{text}}</td>
 </script>
 <script type="text/javascript" charset="utf-8">
-	Template.Message = Handlebars.compile($('message-template').html());
+	Templates = (typeof(Templates) == 'undefined') ? {} : Templates;
+	Templates.Message = Handlebars.compile($('#message-template').html());
 </script>
