--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,40 @@ q:before, q:after {
 table {
 	border-collapse:collapse;
 	border-spacing:0;
+	width: 100%;
+}
+
+table * {
+    padding: 1em 0.5em;
+}
+
+tr:first-child {
+    border-bottom: solid 2px #888;
+}
+
+tr {
+    border-bottom: 1px dashed #D3DAD9;
+}
+
+tr:nth-child(2n+1) {
+    background-color: #eee;
+}
+
+tr:hover {
+    background-color: #fff;
+}
+
+tr:last-child {
+    border-bottom: 0;
+}
+
+th {
+    text-align: left;
+    border-right: whiteSmoke 5px solid;
 }
 
 /******************* General Settings *******************/
-htm,body {
+html,body {
 	height:100%;
 	background:#f5f5f5;
 	color:#717171;
@@ -1431,6 +1461,7 @@ ol#commentslist {
 	width:100%; 
 	overflow:hidden; 
 	padding-bottom:25px;
+	margin-top: 30px;
 }
 .footer_content {
 	width:100%; 
