added routers and webapp models/views to the generic template

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -9,9 +9,13 @@
 <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 <script src="/assets/js/application-min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/assets/js/handlebars.1.0.0.beta.3.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/webapp/models.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/webapp/views.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/webapp/routers.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/zambia/models.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/zambia/collections.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/zambia/views.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/zambia/routers.js" type="text/javascript" charset="utf-8"></script>
 {% app_templates %}
 <style type="text/css" media="screen">
 	.input_smoke {height:18px;background-color:#ddd;border:1px solid #ccc;padding:3px 10px;width:152px;border-radius:4px;}
