--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ html,body {
 	color:#717171;
 	font-size:11px;
 	font-family: "Droid Sans", Helvetica, Arial, sans-serif;
-	border-top:5px solid #ffde00;
+	border-top:2px solid #ffa500;
 }
 
 input, textarea, select {
