Message Log Text input validation

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -147,8 +147,8 @@
 		</div><!--/page-title-->
 		<div class="full_width_content">
 			<div class="filter_pane_dashboard" id="filter">
-				<div class="input_el"><input type="text" name="phone" class="input_smoke" value="Phone Number" id="phone" onfocus="if(this.value == 'Phone Number'){this.value = '';}" onblur="if(this.value == ''){this.value='Phone Number';}"></div>
-				<div class="input_el"><input type="text" name="text" class="input_smoke" value="Text" id="text" onfocus="if(this.value == 'Text'){this.value = '';}" onblur="if(this.value == ''){this.value='Text';}"></div>
+				<div class="input_el"><input type="text" name="phone" class="input_smoke" placeholder="Phone Number" id="phone"></div>
+				<div class="input_el"><input type="text" name="text" class="input_smoke" placeholder="Text" id="text"></div>
 				<div class="input_el">
 					<span class="btn_blue btn_space"><a href="javascript:filter_msgs();" id="filter_btn">filter</a><span></span></span> <span class="btn_gray"><a href="javascript:;" id="reset_btn">reset</a><span></span></span>
 				</div>
