Messsage Log input number validated

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -147,7 +147,7 @@
 		</div><!--/page-title-->
 		<div class="full_width_content">
 			<div class="filter_pane_dashboard" id="filter">
-				<div class="input_el"><input type="text" name="phone" class="input_smoke" placeholder="Phone Number" id="phone"></div>
+				<div class="input_el"><input type="text" name="phone" class="input_smoke" placeholder="Phone Number" id="phone" pattern=".*[0-9]"></div>
 				<div class="input_el"><input type="text" name="text" class="input_smoke" placeholder="Text" id="text"></div>
 				<div class="input_el">
 					<span class="btn_blue btn_space"><a href="javascript:filter_msgs();" id="filter_btn">filter</a><span></span></span> <span class="btn_gray"><a href="javascript:;" id="reset_btn">reset</a><span></span></span>
