--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1589,3 +1589,54 @@ ol#commentslist {
     border-bottom: 1px dashed #d3dad9;
 	width: 790px;
 }
+
+/****************** Pagination *******************/
+
+div.pagination {
+	padding: 3px;
+	margin: 3px;
+	text-align:center;
+	font-family:Tahoma,Helvetica,sans-serif;
+	font-size:.85em;
+}
+
+div.pagination a {
+	border: 1px solid #FFA500;
+	margin-right:3px;
+	padding:2px 8px;
+
+	background-position:bottom;
+	text-decoration: none;
+
+	color: #FFA500;		
+}
+div.pagination a:hover, div.pagination a:active {
+	border: 1px solid #FFA500;
+	background-image:none;
+	background-color:#FFA500;
+	color: #fff;
+}
+div.pagination span.current {
+	margin-right:3px;
+	padding:2px 6px;
+	
+	font-weight: bold;
+	color: #000;
+}
+div.pagination span.disabled {
+	display:none;
+}
+div.pagination a.next{
+	border:2px solid #FFA500;
+	margin:0 0 0 10px;
+}
+div.pagination a.next:hover{
+	border:2px solid #FFA500;
+}
+div.pagination a.prev{
+	border:2px solid #FFA500;
+	margin:0 10px 0 0;
+}
+div.pagination a.prev:hover{
+	border:2px solid #2b55af;
+}
