--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1638,5 +1638,5 @@ div.pagination a.prev{
 	margin:0 10px 0 0;
 }
 div.pagination a.prev:hover{
-	border:2px solid #2b55af;
+	border:2px solid #FFA500;
 }
