--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1603,7 +1603,7 @@ div.pagination {
 div.pagination a {
 	border: 1px solid #A9A9A9;
 	margin-right:3px;
-	padding:2px 8px;
+	padding:4px 8px;
 
 	background-position:bottom;
 	text-decoration: none;
@@ -1618,7 +1618,7 @@ div.pagination a:hover, div.pagination a:active {
 }
 div.pagination span.current {
 	margin-right:3px;
-	padding:2px 6px;
+	padding:4px 6px;
 	
 	font-weight: bold;
 	color: #000;
@@ -1638,5 +1638,5 @@ div.pagination a.prev{
 	margin:0 10px 0 0;
 }
 div.pagination a.prev:hover{
-	border:2px solid #FFA500;
+	border:px solid #FFA500;
 }
