--- a/webapp/templates/webapp/templates.html
+++ b/webapp/templates/webapp/templates.html
@@ -17,7 +17,7 @@
 <script type="text/x-handlebars-template" id="message-search-template" charset="utf-8">
 	<div class="search_pane_dashboard">
 		<form id="search">
-		<div class="input_el"><input type="text" name="phone" class="input_smoke search_field" placeholder="Phone Number" id="search_connection__identity__endswith" pattern=".*[0-9]"></div>
+		<div class="input_el"><input type="text" name="phone" class="input_smoke search_field" placeholder="Phone Number" id="search_connection__identity__endswith" pattern=".*[0-9]" title="Numeric figures only"></div>
 		<div class="input_el"><input type="text" name="text" class="input_smoke search_field" placeholder="Text" id="search_text__contains"></div>
 		<div class="input_el">
 			<span class="btn_blue btn_space"><a href="javascript:$('#search').submit();" class="search_btn">Search</a><span></span></span>
@@ -37,10 +37,10 @@
 <script type="text/x-handlebars-template" id="contact-search-template" charset="utf-8">
 	<div class="search_pane_dashboard">
 		<form id="search">
-		<div class="input_el"><input type="text" name="observer_id" class="input_smoke search_field" id="search_observer_id"></div>
-		<div class="input_el"><input type="text" name="name" class="input_smoke search_field" id="search_name__contains"></div>
-		<div class="input_el"><input type="text" name="phone" class="input_smoke search_field" id="search_connection__identity__endswith"></div>		
-		<div class="input_el"><input type="text" name="location" class="input_smoke search_field" id="search_location__name"></div>
+		<div class="input_el"><input type="text" name="observer_id" class="input_smoke search_field" id="search_observer_id" placeholder="Observer ID" pattern=".*[0-9]" title="Numeric figures only"></div>
+		<div class="input_el"><input type="text" name="name" class="input_smoke search_field" id="search_name__contains" placeholder="Name"></div>
+		<div class="input_el"><input type="text" name="phone" class="input_smoke search_field" id="search_connection__identity__endswith" placeholder="Phone Number" pattern=".*[0-9]" title="Numeric figures only"></div>		
+		<div class="input_el"><input type="text" name="location" class="input_smoke search_field" id="search_location__name" placeholder="Location"></div>
 		<div class="input_el">
 			<span class="btn_blue btn_space"><a href="javascript:$('#search').submit();" class="search_btn">Search</a><span></span></span>
 		</div>
