--- a/webapp/templates/webapp/templates.html
+++ b/webapp/templates/webapp/templates.html
@@ -20,7 +20,7 @@
 		<div class="input_el"><input type="text" name="phone" class="input_smoke search_field" placeholder="Phone Number" id="search_connection__identity__endswith" pattern=".*[0-9]" title="Numeric figures only"></div>
 		<div class="input_el"><input type="text" name="text" class="input_smoke search_field" placeholder="Text" id="search_text__contains"></div>
 		<div class="input_el">
-			<span class="btn_blue btn_space"><a href="javascript:$('#search').submit();" class="search_btn">Search</a><span></span></span>
+			<span class="btn_blue btn_space"><input type="submit" name="submit" value="Search" class="search_btn"><span>&nbsp;</span></span>
 		</div>
 		</form>
 		<div class="clear"></div>
@@ -42,7 +42,7 @@
 		<div class="input_el"><input type="text" name="phone" class="input_smoke search_field" id="search_connection__identity__endswith" placeholder="Phone Number" pattern=".*[0-9]" title="Numeric figures only"></div>		
 		<div class="input_el"><input type="text" name="location" class="input_smoke search_field" id="search_location__name" placeholder="Location"></div>
 		<div class="input_el">
-			<span class="btn_blue btn_space"><a href="javascript:$('#search').submit();" class="search_btn">Search</a><span></span></span>
+			<span class="btn_blue btn_space"><input type="submit" name="submit" value="Search" class="search_btn"><span>&nbsp;</span></span>
 		</div>
 		</form>
 		<div class="clear"></div>
