fix for the throbber to work with jquery-ui 1.8+ removed some template javascript into a separate file that is now being included in the minified js bundle inclusion of autocompletion for locations and their respective styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1457,6 +1457,14 @@ ol#commentslist {
 	background: url(../images/blue_right_hover.png) no-repeat;
 }
 
+/******************* jquery-ui styles *******************/
+.ui-autocomplete-category {
+	font-weight: bold;
+	padding: .2em .4em;
+	margin: .8em 0 .2em;
+	line-height: 1.5;
+}
+
 /******************* Footer *******************/
 
 #footer {
