--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -82,7 +82,7 @@
 						<li><a href="#!/dashboard">Dashboard</a></li> 						
 						<li><a href="#!/elections/checklists">Elections</a>
 							<ul class="sub-menu"> 
-								<li class="current_page_item"><a href="#!/elections/checklists">Checklists</a></li>
+								<li><a href="#!/elections/checklists">Checklists</a></li>
 								<li><a href="#!/elections/incidents">Incidents</a></li> 
 								<li><a href="#!/elections/process_analysis">Process Analysis</a></li> 
 								<li><a href="#!/elections/results_analysis">Results Analysis</a></li> 
