1. change from sort_by to order_by in paginated_collection.js 2. updates to minified version of application-min.js 3. several updates to allow for searching locations and related objects based on progeny of a location. 4. checklist template updates 5. updates to the modelresources to enable searching by id etc.

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Minimalisto Site Template - Typography Page</title>
+<link rel="stylesheet" type="text/css" href="/assets/css/ui-lightness/style.css" />
 <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 <script src="/assets/js/application-min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/assets/js/handlebars.1.0.0.beta.3.js" type="text/javascript" charset="utf-8"></script>
