--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -1,9 +1,9 @@
 <script type="text/x-handlebars-template" id="checklist-filter-template" charset="utf-8">
 	<div id="filter" class="filter_pane">
 		<form id="search">
-		<div class="input_el"><input type="text" name="observer_id" class="input_smoke search_field" placeholder="Monitor Id" id="search_connection__identity__endswith" pattern=".*[0-9]" title="Numeric figures only"></div>
-		<div class="input_el"><input type="text" name="date" class="input_smoke search_field date_field" placeholder="Date" id="search_text__contains"></div>
-		<div class="input_el"><input type="text" name="location" class="input_smoke search_field" placeholder="Location" id="search_text__contains"></div>
+		<div class="input_el"><input type="text" name="observer_id" class="input_smoke search_field" placeholder="Monitor Id" id="search_observer__observer_id__exact" pattern=".*[0-9]" title="Numeric figures only"></div>
+		<div class="input_el"><input type="text" name="date" class="input_smoke search_field date_field" placeholder="Date" id="search_date__exact"></div>
+		<div class="input_el"><input type="text" name="location" class="input_smoke" placeholder="Location" id="location__id"></div>
 		<div class="clear"></div>
 		<div class="input_el">
 			<select name="setup_status" id="setup_status" class="input_smoke">
@@ -49,11 +49,53 @@
 </script>
 <script type="text/x-handlebars-template" id="checklist-header-template" charset="utf-8">
 	<tbody>
-		<tr><th><a href="javascript:;" class="sortable_column" id="sort_observer_id">Monitor Id</a></th><th><a href="javascript:;" class="sortable_column" id="sort_date">Date</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__name">Ward</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__name">Polling District</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__name">Supervisor</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__name">Monitor</a></th><th><span title="Setup">S</span></th><th><span title="Voting">V</span></th><th><span title="Closing">C</span></th><th><span title="Counting">C</span></th><th>Edit</th></tr>
+		<tr><th><a href="javascript:;" class="sortable_column" id="sort_observer__observer_id">Monitor Id</a></th><th><a href="javascript:;" class="sortable_column" id="sort_date">Date</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__parent__parent__parent__name">Ward</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__parent__parent__name">Polling District</a></th><th><a href="javascript:;" class="sortable_column" id="sort_observer__supervisor__name">Supervisor</a></th><th><a href="javascript:;" class="sortable_column" id="sort_observer__name">Monitor</a></th><th style="text-align:center"><span title="Setup">S</span></th><th style="text-align:center"><span title="Voting">V</span></th><th style="text-align:center"><span title="Closing">C</span></th><th style="text-align:center"><span title="Counting">C</span></th><th style="text-align:center">Edit</th></tr>
 	</tbody>
 </script>
+<script type="text/x-handlebars-template" id="checklist-template" charset="utf-8">
+	<td>{{observer.attributes.observer_id}}</td><td>{{date}}</td><td>{{location.attributes.parent.attributes.parent.attributes.parent.attributes.name}}</td><td>{{location.attributes.parent.attributes.parent.attributes.name}}</td><td>{{#if observer.attributes.supervisor}}{{observer.attributes.supervisor.attributes.name}}{{#if observer.attributes.supervisor.attributes.connections.models}} (<strong>{{observer.attributes.supervisor.attributes.connections.models.0.attributes.identity}}</strong>){{/if}}{{else}}&nbsp;{{/if}}</td><td>{{observer.attributes.name}}{{#if observer.attributes.connections.models}} (<strong>{{observer.attributes.connections.models.0.attributes.identity}}</strong>){{/if}}</td><td align="center">{{setup_flag responses}}</td><td align="center">{{setup_flag responses}}</td><td align="center">{{setup_flag responses}}</td><td align="center">{{setup_flag responses}}</td><td align="center">Edit</td>
+</script>
 <script type="text/javascript" charset="utf-8">
+	function checklist_setup_complete(responses) {
+	    return _.all(['A', 'B', 'C', 'CA', 'CB', 'CC', 'CE', 'CF', 'CG', 'CH', 'D', 'E', 'EA', 
+	        'EB', 'EC', 'F', 'G', 'H', 'J', 'K'], function (code) {
+	        return responses.detect(function (response) {
+	            return response.get('question').get('code') == code && response.get('response');
+	        });
+	    });
+	}
+
+	function checklist_setup_missing(responses) {
+	    return !_.any(['A', 'B', 'C', 'CA', 'CB', 'CC', 'CE', 'CF', 'CG', 'CH', 'D', 'E', 'EA', 
+	        'EB', 'EC', 'F', 'G', 'H', 'J', 'K'], function (code) {
+	        return responses.detect(function (response) {
+	            return response.get('question').get('code') == code && response.get('response');
+	        });
+	    });
+	}
+
+	function checklist_setup_partial(responses) {
+	    return _.any(['A', 'B', 'C', 'CA', 'CB', 'CC', 'CE', 'CF', 'CG', 'CH', 'D', 'E', 'EA',
+	        'EB', 'EC', 'F', 'G', 'H', 'J', 'K'], function (code) {
+	        return responses.detect(function (response) {
+	            return response.get('question').get('code') == code && response.get('response');
+	        });
+	    });
+	}
+</script>
+<script type="text/javascript" charset="utf-8">
+	Handlebars.registerHelper('setup_flag', function (responses) {
+		if (checklist_setup_complete(responses)) {
+			return new Handlebars.SafeString('<img src="/assets/images/green_dot.png" alt="complete" />');
+		} else if (checklist_setup_missing(responses)) {
+			return new Handlebars.SafeString('<img src="/assets/images/red_dot.png" alt="missing" />');
+		} else {
+			return new Handlebars.SafeString('<img src="/assets/images/yellow_dot.png" alt="partial" />');
+		}
+	});
+	
 	Templates = (typeof(Templates) == 'undefined') ? {} : Templates;
 	Templates.ChecklistFilter = Handlebars.compile($('#checklist-filter-template').html());
 	Templates.ChecklistHeader = Handlebars.compile($('#checklist-header-template').html());
+	Templates.Checklist = Handlebars.compile($('#checklist-template').html());
 </script>
